syntax = "proto3";

package io.harness.pms.plan;

option java_multiple_files = true;

import "io/harness/pms/plan/plan_node.proto";

service PlanCreationService {
  rpc createPlan(PlanCreationBlobRequest) returns (PlanCreationBlobResponse);
  rpc createFilter(FilterCreationBlobRequest) returns (FilterCreationBlobResponse);
}

message PlanCreationBlobRequest {
  map<string, YamlFieldBlob> dependencies = 1;
}

message PlanCreationBlobResponse {
  map<string, PlanNodeProto> nodes = 1;
  map<string, YamlFieldBlob> dependencies = 2;
  string startingNodeId = 3;
}

message YamlFieldBlob {
  string name = 1;
  bytes blob = 2;
}

message FilterCreationBlobRequest {
  map<string, YamlFieldBlob> dependencies = 1;
}

message FilterCreationBlobResponse {
  string filter = 1;
  map<string, YamlFieldBlob> dependencies = 2;
  map<string, YamlFieldBlob> resolvedDependencies = 3;
}